Added translations NO

--- a/i18n/no/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/no/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Controlz 2025.1.0 lukket beta har startet!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+Vi er glade for å kunngjøre at den lukkede betatesten for Controlz 2025 nå er live! Utvalgte brukere kan nå utforske nye funksjoner, gi tilbakemeldinger og bidra til å forme fremtiden for Controlz.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Hvis du har mottatt en invitasjon, sjekk e-posten din for tilgangsdetaljer.  
+Takk for at du er en del av denne viktige fasen!
