--- a/i18n/no/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/no/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -5,16 +5,16 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivelse
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Denne oppdateringen inkluderer flere viktige feilrettinger som forbedrer ytelsen, reduserer batteriforbruket, og forbedrer blokkoppførselen i programmeringsmiljøet.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Endringer
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Fikset en feil som forårsaket høy CPU-bruk, raskt batteritap og lav ytelse.**
+- **Fikset en feil hvor gamepad-blokker** (f.eks. "er knapp trykket", "er D-PAD knapp trykket") **ikke kunne kobles til andre blokker.**
+- **Fikset et problem i steg-bytte hendelsesblokken** som håndterte berøringshendelser og steg-telling feil.
+- **Fikset en feil i listeblokkens “element av”** der ikke mer enn én blokk kunne kobles som argumentindeks.
