--- a/i18n/no/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/no/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivelse
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Denne oppdateringen introduserer nye tilpasningsmuligheter for joystick, forbedringer i brukergrensesnittet, og viktige stabilitetsfikser.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Endringer
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Fikset en feil i blokkpalettens samlingsvelger**: å velge en samling, bla til en annen og returnere hadde ingen effekt.
+- **Fikset en krasj ved lasting av tunge profiler** med et stort antall blokker.
+- **Lagt til “Aksetype”-egenskap** i joystick-innstillinger for å støtte **en-akset modus** (X, Y, XY).
+- **Lagt til fargelegging** for rattkontrollere (“GMZ”, “No Mercy”).
+- **Lagt til “er trykket”-blokker** for ratt og pedaler.
