--- a/i18n/no/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/no/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -5,21 +5,21 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivelse
 
-This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
+Denne oppdateringen forbedrer støtte for nettbrett, legger til nyttige test-sider, og fikser flere kompatibilitets- og ytelsesproblemer.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Endringer
 
-- **Added tablet layout** for better utilization of larger screens.
-- **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
-- **Fixed a bug where the "motor run" block** didn’t affect motors without encoders due to missing alternate run commands.
-- **Added a page for testing gamepad buttons.**
-- **Added a hub testing page** with a dashboard showing information, connected port devices, and port shake status.
-- **Fixed incorrect accelerometer data interpretation** for BuWizz 2 and 3, which caused faulty orientation readings.
-- **Fixed RAM memory leaks** that led to app termination on some devices due to high system memory usage.
-- **Fixed bugs in profile loading** that previously caused crashes in certain scenarios.
-- **Fixed an Android bug** where releasing gamepad sticks did not reset axis values to zero.
+- **Lagt til nettbrettoppsett** for bedre utnyttelse av større skjermer.
+- **Fikset en feil hvor "hub-knapp trykket" blokken** dukket opp for hubs som ikke støtter denne handlingen. Fikset også upassende **fargesensor-blokker** for ikke-støttede hubs (f.eks. BuWizz).
+- **Fikset en feil hvor "motor kjør" blokken** ikke påvirket motorer uten enkodere på grunn av manglende alternative kjørekommandoer.
+- **Lagt til en side for testing av gamepad-knapper.**
+- **Lagt til en hub-testside** med et dashbord som viser informasjon, tilkoblede portenheter, og port-riste-status.
+- **Fikset feil i tolkning av akselerometerdata** for BuWizz 2 og 3, som forårsaket feil orienteringsavlesninger.
+- **Fikset minnelekkasjer i RAM** som førte til at appen stoppet på enkelte enheter på grunn av høy systemminnebruk.
+- **Fikset feil ved lasting av profiler** som tidligere forårsaket krasj i visse situasjoner.
+- **Fikset en Android-feil** hvor det å slippe gamepad-stikker ikke nullstilte akseverdiene til null.
