--- a/i18n/no/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/no/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -1,21 +1,21 @@
 ---
 slug: closed-test-release-2025-1-5
-title: Release Controlz 2025.1.5
+title: Utgivelse Controlz 2025.1.5
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivelse
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Denne oppdateringen forbedrer blokkredigeringsopplevelsen, øker ytelsen og sikrer riktig funksjonalitet på nyere Android-versjoner.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Endringer
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Fikset en feil med hub-skanning på Android 12+** ved å be om presis lokasjonstillatelse.
+- **Lagt til mulighet for å skjule/vis blokkpaletten** ved å klikke på den valgte blokk-kolleksjonen.
+- **Lagt til et størrelseshåndtak** på blokkpaletten for å tillate **manuell endring av størrelse**.
+- **Fikset høy CPU-bruk** når en profil var lastet inn, men programmet ikke kjørte.
+- **Forbedret "String list"-blokkredigereren** for å unngå at innhold blir avkortet. Nå deles elementene opp i kolonner for bedre synlighet med store lister.
