Added translations PL

--- a/i18n/pl/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/pl/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -1,20 +1,20 @@
 ---
 slug: closed-test-release-2025-1-1
-title: Release Controlz 2025.1.1
+title: Wydanie Controlz 2025.1.1
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Opis
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Ta aktualizacja zawiera kilka ważnych poprawek błędów, które poprawiają wydajność, zmniejszają zużycie baterii oraz usprawniają działanie bloków w środowisku programowania.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmiany
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Naprawiono błąd powodujący wysokie zużycie CPU, szybkie rozładowanie baterii oraz niską wydajność.**
+- **Naprawiono błąd, w którym bloki gamepada** (np. „czy przycisk jest wciśnięty”, „czy przycisk D-PAD jest wciśnięty”) **nie mogły być dołączane do innych bloków.**
+- **Naprawiono problem w bloku zdarzenia przełączania kroku**, który niepoprawnie obsługiwał zdarzenia dotykowe i liczenie kroków.
+- **Naprawiono błąd w bloku listy „element z”**, gdzie można było dołączyć nie więcej niż jeden blok jako argument indeksu.
