--- a/i18n/pl/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/pl/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -1,21 +1,21 @@
 ---
 slug: closed-test-release-2025-1-2-3
-title: Release Controlz 2025.1.2 - 2025.1.3
+title: Wydanie Controlz 2025.1.2 - 2025.1.3
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Opis
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Ta aktualizacja wprowadza nowe opcje personalizacji joysticka, usprawnienia interfejsu użytkownika oraz ważne poprawki stabilności.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmiany
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Naprawiono błąd w selektorze kolekcji palety bloków**: wybieranie kolekcji, przewijanie do innej i powrót nie miało żadnego efektu.
+- **Naprawiono awarię podczas ładowania ciężkich profili** z dużą liczbą bloków.
+- **Dodano właściwość „Typ osi”** w ustawieniach joysticka, umożliwiającą tryb **pojedynczej osi** (X, Y, XY).
+- **Dodano kolorowanie** dla kierownic („GMZ”, „No Mercy”).
+- **Dodano bloki „czy wciśnięty”** dla kierownic i pedałów.
