--- a/i18n/pl/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/pl/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -1,25 +1,25 @@
 ---
 slug: closed-test-release-2025-1-4
-title: Release Controlz 2025.1.4
+title: Wydanie Controlz 2025.1.4
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Opis
 
-This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
+Ta aktualizacja poprawia wsparcie dla tabletów, dodaje przydatne strony testowe oraz naprawia kilka problemów ze zgodnością i wydajnością.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmiany
 
-- **Added tablet layout** for better utilization of larger screens.
-- **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
-- **Fixed a bug where the "motor run" block** didn’t affect motors without encoders due to missing alternate run commands.
-- **Added a page for testing gamepad buttons.**
-- **Added a hub testing page** with a dashboard showing information, connected port devices, and port shake status.
-- **Fixed incorrect accelerometer data interpretation** for BuWizz 2 and 3, which caused faulty orientation readings.
-- **Fixed RAM memory leaks** that led to app termination on some devices due to high system memory usage.
-- **Fixed bugs in profile loading** that previously caused crashes in certain scenarios.
-- **Fixed an Android bug** where releasing gamepad sticks did not reset axis values to zero.
+- **Dodano układ dla tabletów**, aby lepiej wykorzystać większe ekrany.
+- **Naprawiono błąd, w którym blok „przycisk hub’a wciśnięty”** pojawiał się dla hubów, które nie obsługują tej akcji. Naprawiono także niewłaściwe bloki **czujnika koloru** dla nieobsługiwanych hubów (np. BuWizz).
+- **Naprawiono błąd, w którym blok „uruchom silnik”** nie wpływał na silniki bez enkoderów z powodu braku alternatywnych poleceń uruchomienia.
+- **Dodano stronę do testowania przycisków gamepada.**
+- **Dodano stronę testowania hubów** z panelem pokazującym informacje, podłączone urządzenia portów oraz status wstrząsów portów.
+- **Naprawiono niepoprawną interpretację danych akcelerometru** dla BuWizz 2 i 3, która powodowała błędne odczyty orientacji.
+- **Naprawiono wycieki pamięci RAM**, które prowadziły do zamykania aplikacji na niektórych urządzeniach z powodu wysokiego zużycia pamięci systemowej.
+- **Naprawiono błędy podczas ładowania profilu**, które wcześniej powodowały awarie w niektórych scenariuszach.
+- **Naprawiono błąd w Androidzie**, gdzie zwolnienie gałek gamepada nie resetowało wartości osi do zera.
