--- a/i18n/pl/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/pl/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -1,21 +1,21 @@
 ---
 slug: closed-test-release-2025-1-5
-title: Release Controlz 2025.1.5
+title: Wydanie Controlz 2025.1.5
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Opis
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Ta aktualizacja ulepsza doświadczenie edycji bloków, poprawia wydajność oraz zapewnia prawidłowe działanie na nowszych wersjach Androida.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Zmiany
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Naprawiono błąd z wykrywaniem hubów na Androidzie 12+** poprzez dodanie żądania precyzyjnego pozwolenia na lokalizację.
+- **Dodano opcję ukrywania/pokazywania palety bloków** po kliknięciu na aktualnie wybraną kolekcję bloków.
+- **Dodano uchwyt do zmiany rozmiaru** palety bloków, umożliwiający **ręczną zmianę rozmiaru**.
+- **Naprawiono wysokie zużycie CPU** gdy profil był załadowany, ale program nie był uruchomiony.
+- **Ulepszono edytor bloku „Lista tekstów”** tak, aby uniknąć obcinania zawartości. Elementy są teraz podzielone na kolumny dla lepszej widoczności przy dużych listach.
