--- a/i18n/pl/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/pl/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Zamknięta beta Controlz 2025.1.0 rozpoczęta!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+Z radością ogłaszamy, że zamknięte testy beta Controlz 2025 są już dostępne! Wybrani użytkownicy mogą teraz przetestować nowe funkcje, przesłać swoje uwagi i pomóc kształtować przyszłość Controlz.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Jeśli otrzymałeś zaproszenie, sprawdź swoją skrzynkę e-mail, aby uzyskać szczegóły dostępu.  
+Dziękujemy, że jesteś częścią tego ważnego etapu!
