Added translations PT

--- a/i18n/pt/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/pt/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Beta Fechada do Controlz 2025.1.0 Começou!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+Temos o prazer de anunciar que o teste beta fechado do Controlz 2025 já está disponível! Usuários selecionados agora podem explorar novos recursos, enviar feedback e ajudar a moldar o futuro do Controlz.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Se você recebeu um convite, confira seu e-mail para obter os detalhes de acesso.  
+Obrigado por fazer parte desta fase importante!
