--- a/i18n/pt/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/pt/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -5,16 +5,16 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descrição
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Esta atualização inclui várias correções importantes de bugs que melhoram o desempenho, reduzem o consumo de bateria e aprimoram o comportamento dos blocos no ambiente de programação.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Alterações
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Corrigido um bug que causava alto uso da CPU, consumo elevado de bateria e baixo desempenho.**
+- **Corrigido um bug onde os blocos de gamepad** (por exemplo, “botão pressionado”, “botão D-PAD pressionado”) **não podiam ser conectados a outros blocos.**
+- **Corrigido um problema no bloco de evento de troca de passo** que tratava incorretamente os eventos de toque e a contagem de passos.
+- **Corrigido um bug no bloco de lista “item de”** onde não era possível anexar mais de um bloco como argumento de índice.
