--- a/i18n/pt/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/pt/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -1,21 +1,19 @@
 ---
-slug: closed-test-release-2025-1-2-3
-title: Release Controlz 2025.1.2 - 2025.1.3
+slug: closed-test-release-2025-1-4
+title: Release Controlz 2025.1.4
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descrição
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Esta atualização melhora o suporte para tablets, adiciona páginas úteis de testes e corrige vários problemas de compatibilidade e desempenho.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Alterações
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Adicionado layout para tablets** para melhor aproveitamento de telas maiores.
+- **Corrigido um bug onde o bloco "botão do hub pressionado"** aparecia para hubs que não suportam essa ação. Também corrigidos blocos inadequados de **sensor de cor** para hubs não suportados (ex: BuWizz).
+- **Corrigido um bug onde o bloco "motor em execução"** não afetava motores sem encoder devido à falta de comandos alternativos de execução.
