--- a/i18n/pt/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/pt/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descrição
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Esta atualização aprimora a experiência de edição de blocos, melhora o desempenho e garante o funcionamento adequado em versões mais recentes do Android.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Alterações
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Corrigido um bug na varredura de hubs no Android 12+** solicitando permissão de localização precisa.
+- **Adicionada opção para ocultar/exibir a paleta de blocos** clicando na coleção de blocos atualmente selecionada.
+- **Adicionada uma alça de redimensionamento** na paleta de blocos para permitir **redimensionamento manual**.
+- **Corrigido uso elevado da CPU** quando um perfil estava carregado, mas o programa não estava rodando.
+- **Melhorado o editor do bloco "Lista de strings"** para evitar que o conteúdo seja cortado. Agora os itens são divididos em colunas para melhor visualização em listas grandes.
