Added translations RO

--- a/i18n/ro/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/ro/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -1,20 +1,20 @@
 ---
 slug: closed-test-release-2025-1-1
-title: Release Controlz 2025.1.1
+title: Lansare Controlz 2025.1.1
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descriere
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Această actualizare include mai multe corecturi importante de erori care îmbunătățesc performanța, reduc consumul bateriei și optimizează comportamentul blocurilor în mediul de programare.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Modificări
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Corectată o eroare care cauza utilizare ridicată a CPU-ului, descărcare rapidă a bateriei și performanță scăzută.**
+- **Corectată o eroare în blocurile pentru gamepad** (de ex., „este butonul apăsat”, „este apăsat butonul D-PAD”) **care împiedica atașarea acestora la alte blocuri.**
+- **Corectată o problemă în blocul de eveniment „comutator cu pași”** care gestiona incorect evenimentele tactile și numărarea pașilor.
+- **Corectată o eroare în blocul de listă „element din”** care permitea atașarea unui singur bloc ca index de argument.
