--- a/i18n/ro/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/ro/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -1,21 +1,21 @@
 ---
 slug: closed-test-release-2025-1-2-3
-title: Release Controlz 2025.1.2 - 2025.1.3
+title: Lansare Controlz 2025.1.2 - 2025.1.3
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descriere
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Această actualizare introduce noi opțiuni de personalizare pentru joystick, îmbunătățiri ale interfeței și corecturi importante pentru stabilitate.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Modificări
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Corectată o eroare în selectorul de colecții din paleta de blocuri**: selectarea unei colecții, derularea către alta și revenirea nu aveau niciun efect.
+- **Corectată o prăbușire la încărcarea profilelor complexe**, care conțineau un număr mare de blocuri.
+- **Adăugată proprietatea „Tip axe”** în setările joystick-ului pentru a suporta **modul pe o singură axă** (X, Y, XY).
+- **Adăugată colorizare** pentru controllerele tip volan („GMZ”, „No Mercy”).
+- **Adăugați blocuri de tip „este apăsat”** pentru volane și pedale.
