--- a/i18n/ro/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/ro/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -1,25 +1,25 @@
 ---
 slug: closed-test-release-2025-1-4
-title: Release Controlz 2025.1.4
+title: Lansare Controlz 2025.1.4
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descriere
 
-This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
+Această actualizare îmbunătățește suportul pentru tablete, adaugă pagini utile de testare și corectează mai multe probleme de compatibilitate și performanță.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Modificări
 
-- **Added tablet layout** for better utilization of larger screens.
-- **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
-- **Fixed a bug where the "motor run" block** didn’t affect motors without encoders due to missing alternate run commands.
-- **Added a page for testing gamepad buttons.**
-- **Added a hub testing page** with a dashboard showing information, connected port devices, and port shake status.
-- **Fixed incorrect accelerometer data interpretation** for BuWizz 2 and 3, which caused faulty orientation readings.
-- **Fixed RAM memory leaks** that led to app termination on some devices due to high system memory usage.
-- **Fixed bugs in profile loading** that previously caused crashes in certain scenarios.
-- **Fixed an Android bug** where releasing gamepad sticks did not reset axis values to zero.
+- **Adăugat un layout pentru tablete** pentru o mai bună utilizare a ecranelor mai mari.
+- **Corectată o eroare în care blocul „buton hub apăsat”** apărea pentru hub-uri care nu suportă această acțiune. De asemenea, au fost corectate **blocurile de senzor de culoare** nepotrivite pentru hub-uri nesuportate (ex: BuWizz).
+- **Corectată o eroare în care blocul „pornire motor”** nu afecta motoarele fără encodere din cauza lipsei comenzilor alternative de rulare.
+- **Adăugată o pagină pentru testarea butoanelor de gamepad.**
+- **Adăugată o pagină de testare a hub-urilor**, cu un panou ce afișează informații, dispozitive conectate la porturi și statusul de „shake” al porturilor.
+- **Corectată interpretarea incorectă a datelor de la accelerometru** pentru BuWizz 2 și 3, care ducea la citiri greșite ale orientării.
+- **Corectate scurgeri de memorie RAM** care provocau închiderea aplicației pe unele dispozitive din cauza utilizării ridicate a memoriei.
+- **Corectate erori la încărcarea profilelor** care anterior provocau prăbușirea aplicației în anumite scenarii.
+- **Corectată o eroare pe Android** în care eliberarea stick-urilor de la gamepad nu reseta valorile axelor la zero.
