--- a/i18n/ro/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/ro/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -1,21 +1,25 @@
 ---
-slug: closed-test-release-2025-1-5
-title: Release Controlz 2025.1.5
+slug: closed-test-release-2025-1-4
+title: Lansare Controlz 2025.1.4
 authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Descriere
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Această actualizare îmbunătățește suportul pentru tablete, adaugă pagini utile de testare și remediază mai multe probleme de compatibilitate și performanță.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Modificări
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Adăugat layout pentru tablete** pentru o utilizare mai eficientă a ecranelor mari.
+- **Remediată o eroare în care blocul „buton hub apăsat”** apărea pentru hub-uri care nu acceptă această acțiune. De asemenea, au fost corectate **blocurile de senzor de culoare** afișate incorect pentru hub-uri nesuportate (ex: BuWizz).
+- **Remediată o eroare în care blocul „pornire motor”** nu funcționa cu motoarele fără encodere, din cauza lipsei comenzilor alternative de rulare.
+- **Adăugată o pagină pentru testarea butoanelor de gamepad.**
+- **Adăugată o pagină de testare a hub-urilor**, cu un panou care afișează informații, dispozitive conectate la porturi și starea de „shake” a porturilor.
+- **Corectată interpretarea incorectă a datelor de accelerometru** pentru BuWizz 2 și 3, care ducea la erori în citirea orientării.
+- **Corectate scurgeri de memorie RAM** care duceau la închiderea aplicației pe unele dispozitive, din cauza utilizării excesive a memoriei.
+- **Remediate erori la încărcarea profilelor**, care anterior puteau cauza prăbușirea aplicației în anumite scenarii.
+- **Remediată o eroare pe Android** în care eliberarea stick-urilor gamepad-ului nu reseta valorile axelor la zero.
