--- a/i18n/ro/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/ro/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Controlz 2025.1.0 Test Beta Închis a Început!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+Suntem încântați să anunțăm că testul beta închis pentru Controlz 2025 este acum activ! Utilizatorii selectați pot explora noile funcționalități, pot oferi feedback și pot contribui la modelarea viitorului aplicației Controlz.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Dacă ai primit o invitație, verifică-ți emailul pentru detaliile de acces.  
+Îți mulțumim că faci parte din această etapă importantă!
