Added translations SE

--- a/i18n/se/docusaurus-plugin-content-blog/2025-04-04-post.md
+++ b/i18n/se/docusaurus-plugin-content-blog/2025-04-04-post.md
@@ -5,11 +5,11 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-## 🚀 Controlz 2025.1.0 Closed Beta Has Begun!
+## 🚀 Controlz 2025.1.0 Stängd Beta Har Börjat!
 
-We're excited to announce that the closed beta test for Controlz 2025 is now live! Selected users can now explore new features, provide feedback, and help shape the future of Controlz.
+Vi är glada att meddela att den stängda beta-testen för Controlz 2025 nu är igång! Utvalda användare kan nu utforska nya funktioner, ge feedback och hjälpa till att forma Controlz framtid.
 
 <!-- truncate -->
 
-If you've received an invitation, check your email for access details. 
-Thanks for being part of this important phase!
+Om du har fått en inbjudan, kolla din e-post för åtkomstinformation.  
+Tack för att du är en del av denna viktiga fas!
