--- a/i18n/se/docusaurus-plugin-content-blog/2025-04-14-post.md
+++ b/i18n/se/docusaurus-plugin-content-blog/2025-04-14-post.md
@@ -5,16 +5,16 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivning
 
-This update includes several important bug fixes that enhance performance, reduce battery consumption, and improve block behavior in the programming environment.
+Denna uppdatering inkluderar flera viktiga buggfixar som förbättrar prestanda, minskar batteriförbrukningen och förbättrar blockbeteendet i programmeringsmiljön.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Förändringar
 
-- **Fixed a bug causing high CPU usage, battery drain, and low performance.**
-- **Fixed a bug where gamepad blocks** (e.g., “is button pressed”, “is D-PAD button pressed”) **couldn’t be attached to other blocks.**
-- **Fixed an issue in the step switch event block** that incorrectly handled touch events and step counting.
-- **Fixed a bug in the list block’s “item of”** where no more than one block could be attached as an argument index.
+- **Fixade en bugg som orsakade hög CPU-användning, batteriförbrukning och låg prestanda.**
+- **Fixade en bugg där gamepad-block** (t.ex. ”är knapp nedtryckt”, ”är D-PAD-knapp nedtryckt”) **inte kunde kopplas till andra block.**
+- **Fixade ett problem i stegbrytarevent-blocket** som hanterade touchhändelser och stegräkning felaktigt.
+- **Fixade en bugg i listblocket ”item of”** där inte mer än ett block kunde kopplas som argumentindex.
