--- a/i18n/se/docusaurus-plugin-content-blog/2025-04-19-post.md
+++ b/i18n/se/docusaurus-plugin-content-blog/2025-04-19-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivning
 
-This update introduces new joystick customization options, UI improvements, and important stability fixes.
+Denna uppdatering introducerar nya anpassningsalternativ för joystick, förbättringar av användargränssnittet och viktiga stabilitetsfixar.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Förändringar
 
-- **Fixed a bug in the blocks palette collection selector**: selecting a collection, scrolling to another, and returning had no effect.
-- **Fixed a crash when loading heavy profiles** with a large number of blocks.
-- **Added “Axes type” property** to joystick settings to support **single-axis mode** (X, Y, XY).
-- **Added colorization** for steering wheel controllers (“GMZ”, “No Mercy”).
-- **Added “is pressed” blocks** for steering wheels and pedals.
+- **Fixade en bugg i blockpalettens samlingsväljare**: att välja en samling, scrolla till en annan och sedan återgå hade ingen effekt.
+- **Fixade en krasch vid laddning av tunga profiler** med många block.
+- **La till egenskapen ”Axes type”** i joystick-inställningarna för att stödja **enkelaxelläge** (X, Y, XY).
+- **La till färgmarkering** för rattkontroller (“GMZ”, “No Mercy”).
+- **La till ”är nedtryckt”-block** för rattar och pedaler.
