--- a/i18n/se/docusaurus-plugin-content-blog/2025-05-17-post.md
+++ b/i18n/se/docusaurus-plugin-content-blog/2025-05-17-post.md
@@ -5,17 +5,17 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivning
 
-This update enhances the block editing experience, improves performance, and ensures proper functionality on newer Android versions.
+Denna uppdatering förbättrar blockredigeringsupplevelsen, ökar prestandan och säkerställer korrekt funktionalitet på nyare Android-versioner.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Förändringar
 
-- **Fixed a bug with hub scanning on Android 12+** by requesting precise location permission.
-- **Added option to hide/show the blocks palette** by clicking on the currently selected block collection.
-- **Added a resize handle** to the blocks palette to allow **manual resizing**.
-- **Fixed high CPU usage** when a profile was loaded but the program wasn’t running.
-- **Improved the "String list" block editor** to avoid content being cut off. Now items are split into columns for better visibility with large lists.
+- **Fixade en bugg med hub-skanning på Android 12+** genom att begära exakt platsbehörighet.
+- **La till ett alternativ för att dölja/visa blockpaletten** genom att klicka på den för närvarande valda blocksamlingen.
+- **La till ett storlekshandtag** på blockpaletten för att möjliggöra **manuell storleksändring**.
+- **Fixade hög CPU-användning** när en profil laddades men programmet inte kördes.
+- **Förbättrade redigeraren för "String list"-blocket** för att undvika att innehållet klipptes av. Nu delas objekten upp i kolumner för bättre översikt vid stora listor.
