--- a/i18n/se/docusaurus-plugin-content-blog/2025-05-10-post.md
+++ b/i18n/se/docusaurus-plugin-content-blog/2025-05-10-post.md
@@ -5,21 +5,21 @@ authors: [maxim]
 tags: [dev, test]
 ---
 
-### Description
+### Beskrivning
 
-This update improves support for tablets, adds useful testing pages, and fixes several compatibility and performance issues.
+Denna uppdatering förbättrar stödet för surfplattor, lägger till användbara testsidor och åtgärdar flera kompatibilitets- och prestandaproblem.
 
 <!-- truncate -->
 ---
 
-### Changes
+### Förändringar
 
-- **Added tablet layout** for better utilization of larger screens.
-- **Fixed a bug where the "hub button pressed" block** appeared for hubs that do not support this action. Also fixed inappropriate **color sensor blocks** for unsupported hubs (e.g., BuWizz).
-- **Fixed a bug where the "motor run" block** didn’t affect motors without encoders due to missing alternate run commands.
-- **Added a page for testing gamepad buttons.**
-- **Added a hub testing page** with a dashboard showing information, connected port devices, and port shake status.
-- **Fixed incorrect accelerometer data interpretation** for BuWizz 2 and 3, which caused faulty orientation readings.
-- **Fixed RAM memory leaks** that led to app termination on some devices due to high system memory usage.
-- **Fixed bugs in profile loading** that previously caused crashes in certain scenarios.
-- **Fixed an Android bug** where releasing gamepad sticks did not reset axis values to zero.
+- **La till surfplattelayout** för bättre utnyttjande av större skärmar.
+- **Fixade en bugg där blocket "hub button pressed"** dök upp för hubbar som inte stödjer denna funktion. Fixade även olämpliga **färg sensors-block** för icke-stödda hubbar (t.ex. BuWizz).
+- **Fixade en bugg där blocket "motor run"** inte påverkade motorer utan encoders på grund av saknade alternativa körkommandon.
+- **La till en sida för test av gamepad-knappar.**
+- **La till en testsida för hubben** med en instrumentpanel som visar information, anslutna portenheter och portens skakstatus.
+- **Fixade felaktig tolkning av accelerometerdata** för BuWizz 2 och 3, vilket orsakade felaktiga orienteringsavläsningar.
+- **Fixade RAM-minnesläckor** som ledde till att appen avslutades på vissa enheter på grund av hög systemminnesanvändning.
+- **Fixade buggar vid profilinläsning** som tidigare orsakade krascher i vissa scenarier.
+- **Fixade en Android-bugg** där frigöring av gamepad-sticks inte återställde axelvärden till noll.
